unpackaged/main/default/objects/litify_pm__Referral__c/litify_pm__Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <displayFormat>RFR-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>