unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Active_Referral_Transaction__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Active_Referral_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Referral Transaction</label>
    <referenceTo>litify_pm__Referral_Transaction__c</referenceTo>
    <relationshipLabel>Referral</relationshipLabel>
    <relationshipName>Referral</relationshipName>
    <type>Lookup</type>
</CustomField>