unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Agreement_Type__c</fullName>
    <label>Agreement Type (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>