unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Case_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Case_Postal_Code__c</fullName>
    <label>Case Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>