unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Client_Address_1__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Client_Address_1__c</fullName>
    <label>Client Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>