unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Client_City__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Client_City__c</fullName>
    <label>Client City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>