unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Client_email__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Client_email__c</fullName>
    <label>Client email</label>
    <type>Email</type>
</CustomField>