unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Client_Last_Name__c</fullName>
    <label>Client Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>