unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Client_phone__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Client_phone__c</fullName>
    <label>Client phone</label>
    <type>Phone</type>
</CustomField>