unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Document_Count__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Document_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>