unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Expires_At__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Expires_At__c</fullName>
    <description>This field is for saving the expiration date when there is no Referral Transaction associated to the Referral</description>
    <inlineHelpText>Contains the expiration date when there is not a Referral Transaction associated to the Referral (Send to a firm)</inlineHelpText>
    <label>Outgoing Expires At</label>
    <type>DateTime</type>
</CustomField>