unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__External_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__External_Ref_Number__c</fullName>
    <description>This Id was specified when referral was created and it is how clients identify referrals internally.</description>
    <label>Reference Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>