unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>