unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Extra_info__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Extra_info__c</fullName>
    <label>Extra info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>