unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Handling_Firm__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Handling_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Proposed handling firm</inlineHelpText>
    <label>Handling Firm</label>
    <referenceTo>litify_pm__Firm__c</referenceTo>
    <relationshipLabel>Referrals as HF</relationshipLabel>
    <relationshipName>Referrals_as_HF</relationshipName>
    <type>Lookup</type>
</CustomField>