unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Incident_date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Incident_date__c</fullName>
    <label>Incident date</label>
    <type>Date</type>
</CustomField>