unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Intake</description>
    <inlineHelpText>Original Intake</inlineHelpText>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Converted_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>