unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Investigated_at__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Investigated_at__c</fullName>
    <label>Investigated at</label>
    <type>DateTime</type>
</CustomField>