unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for saving is anonymous checkbox when creating a referral from an intake (there is not an existing Referral Transaction associated)</description>
    <inlineHelpText>Contains if the Referral has to be anonymous when there is no a Referral Transaction associated</inlineHelpText>
    <label>Outgoing Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>