unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Litify_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Litify_Status__c</fullName>
    <description>Shows the referral litify status</description>
    <formula>IF(TEXT(litify_pm__Status__c) = &quot;New&quot;,
$Label.litify_pm__Litify_Status_New,
IF( 
AND( 
TEXT(litify_pm__Status__c) = &quot;Active&quot;, 
OR( 
litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c = &quot;sent_to_attorney&quot;, 
litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c = &quot;attorney_interested&quot;)), 
$Label.litify_pm__Litify_Status_Under_Review,
IF( 
AND( 
TEXT(litify_pm__Status__c) = &quot;Active&quot;,  
OR( 
litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c = &quot;expired&quot;, 
litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c = &quot;cancelled&quot;)),
$Label.litify_pm__Litify_Status_Under_Review,
IF(TEXT(litify_pm__Status__c) = &quot;Pending&quot;,
$Label.litify_pm__Litify_Status_Pending,
IF(TEXT(litify_pm__Status__c) = &quot;Cancelled&quot;,
$Label.litify_pm__Litify_Status_Cancelled,
IF( 
AND( 
TEXT(litify_pm__Status__c) = &quot;active&quot;, litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c= &quot;active&quot;),
$Label.litify_pm__Litify_Status_Signed_Up,
IF( 
AND( 
TEXT(litify_pm__Status__c) = &quot;active&quot;,
OR(litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c = &quot;verdict&quot;, 
litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c = &quot;settled&quot;)),
$Label.litify_pm__Litify_Status_Won,
IF( 
AND( 
TEXT(litify_pm__Status__c) = &quot;Active&quot;, litify_pm__Active_Referral_Transaction__r.litify_pm__Status__c = &quot;lost&quot;),
$Label.litify_pm__Litify_Status_Lost,
&quot;Other&quot;))))))))</formula>
    <label>Litify Status</label>
    <type>Text</type>
</CustomField>