unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__LRN_Created_At__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__LRN_Created_At__c</fullName>
    <label>LRN Created At</label>
    <type>DateTime</type>
</CustomField>