unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__LRN_Investigated_At__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__LRN_Investigated_At__c</fullName>
    <formula>litify_pm__Active_Referral_Transaction__r.litify_pm__Investigated_At__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LRN Investigated At</label>
    <type>DateTime</type>
</CustomField>