unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Originating_Firm__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Originating_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Firm that referred out this referral</inlineHelpText>
    <label>Originating Firm</label>
    <referenceTo>litify_pm__Firm__c</referenceTo>
    <relationshipLabel>Referrals as OF</relationshipLabel>
    <relationshipName>Referrals_as_OF</relationshipName>
    <type>Lookup</type>
</CustomField>