unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Referral_Kind__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Referral_Kind__c</fullName>
    <formula>IF (litify_pm__Originating_Firm__r.litify_pm__ExternalId__c =  $Setup.litify_pm__Public_Setup__c.litify_pm__litify_organization_id__c,
  &#39;outgoing&#39;,
  &#39;incoming&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Kind</label>
    <type>Text</type>
</CustomField>