unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Referrals__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Referrals__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>