unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Scheduled_for_Send__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Scheduled_for_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled for Send</label>
    <type>Checkbox</type>
</CustomField>