unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>active</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>draft</fullName>
                <default>true</default>
                <label>draft</label>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>