unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Status_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Status_Description__c</fullName>
    <formula>CASE( TEXT(litify_pm__Status__c), 
  &quot;active&quot;, $Label.litify_pm__Referral_Status_active_description, 
  &quot;cancelled&quot;, $Label.litify_pm__Referral_Status_cancelled_description, 
  &quot;new&quot;, $Label.litify_pm__Referral_Status_new_description, 
  &quot;draft&quot;, $Label.litify_pm__Referral_Status_draft_description, 
  &quot;Not available&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Description</label>
    <type>Text</type>
</CustomField>