unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Suggested_Percentage_fee__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Suggested_Percentage_fee__c</fullName>
    <label>Suggested Percentage fee (deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>