unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__sync_fail_count__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__sync_fail_count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sync fail counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>