unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Sync_last_updated_at__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Sync_last_updated_at__c</fullName>
    <label>Sync last updated at</label>
    <type>DateTime</type>
</CustomField>