unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__sync_msg__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__sync_msg__c</fullName>
    <label>Sync Msg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>