unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__sync_status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__sync_status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>SYNCED</fullName>
            </value>
            <value>
                <fullName>DEAD</fullName>
            </value>
            <value>
                <fullName>IDLE</fullName>
                <default>true</default>
                <label>IDLE</label>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>