unpackaged/main/default/objects/litify_pm__Referral__c/fields/litify_pm__Sync_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Sync_Status_Description__c</fullName>
    <formula>CASE( TEXT(litify_pm__sync_status__c), 
  &quot;new&quot;, $Label.litify_pm__Referral_Sync_Status_new_description, 
  &quot;failed&quot;, $Label.litify_pm__Referral_Sync_Status_failed_description, 
  &quot;synced&quot;, $Label.litify_pm__Referral_Sync_Status_synced_description, 
  &quot;dead&quot;, $Label.litify_pm__Referral_Sync_Status_dead_description, 
  &quot;idle&quot;, $Label.litify_pm__Referral_Sync_Status_idle_description, 
  &quot;Not available&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync Status Description</label>
    <type>Text</type>
</CustomField>