unpackaged/main/default/objects/litify_pm__Referral__c/recordTypes/litify_pm__Incoming_Referral.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Incoming_Referral</fullName>
    <active>true</active>
    <label>Incoming Referral</label>
</RecordType>