unpackaged/main/default/objects/litify_pm__Referral__c/recordTypes/litify_pm__Outgoing_Referral.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Outgoing_Referral</fullName>
    <active>true</active>
    <label>Outgoing Referral</label>
</RecordType>