unpackaged/main/default/objects/litify_pm__Referral__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Litify_com_ID__c</columns>
    <columns>litify_pm__Client_First_Name__c</columns>
    <columns>litify_pm__Client_Last_Name__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>