unpackaged/main/default/objects/litify_pm__Referral__c/listViews/litify_pm__Incoming_Referrals.listView-meta.xml
<ListView>
    <fullName>litify_pm__Incoming_Referrals</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Litify_com_ID__c</columns>
    <columns>litify_pm__Client_First_Name__c</columns>
    <columns>litify_pm__Client_Last_Name__c</columns>
    <columns>litify_pm__Client_State__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Originating_Firm__c</columns>
    <columns>litify_pm__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Referral_Kind__c</field>
        <operation>equals</operation>
        <value>incoming</value>
    </filters>
    <label>Incoming Referrals</label>
</ListView>